After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640994 - Email label colour disappears in message list pane when selected
Email label colour disappears in message list pane when selected
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: Mailer
2.32.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: evolution-mail-maintainers
Evolution QA team
Depends on:
Blocks:
 
 
Reported: 2011-01-31 04:03 UTC by Dan
Modified: 2019-05-02 08:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan 2011-01-31 04:03:08 UTC
When an email is selected the tag colouring would disappear and it would only have the colour set for selected items (Linux).
Would it be already possible to change this behaviour in the settings (I am using Ubuntu 10.10)?
Or would it need a change in the Evolution program?
A possibility would be that the font colour of the selected email subject, addresses, ... would stay in the tag colour, but the "surrounding" of it would change to the "selected items colour which the OS sets".
Another approach has taken thunderbird, it would colour the selection according to the tag colour. If there is no tagging, then it would colour according to the normal "selected items colour".
Comment 1 Milan Crha 2011-02-23 15:02:31 UTC
Thanks for a bug report. It's done this way intentionally, because the selected color can match color of the tag, so one can result in seeing "nothing". I know that the same can apply when the item is not selected, but one can expect user being so clever that he/she will not set tag color same as is background of the window.

I imagine full set of different tags in the message list and selecting them all may make a "nice" rainbow, instead of consistent view on selection, thus I'm not much convinced in thunderbird approach either.

I tend to WontFix this.
Comment 2 Dan 2011-04-27 12:23:33 UTC
Finally I get around to write again. I kept in mind what you said, but I still think a change would be very helpful. I forget to look at the colour of the email before clicking on it, afterwards I would need to click on another email to find out (or click label, ...). The approach of thunderbird is fine with me, it inverts the colours and let the written part be white. Why not?
Comment 3 Dan 2012-02-10 03:01:30 UTC
Thanks for looking into this. In Ubuntu 11.10 it is still a problem and I am affected daily.
Comment 4 Lukas Pirl 2018-10-01 14:34:15 UTC
+1 on Dan's view on this, although I see Milan's points, of course.

I use labels a lot for short-term organization. I *want* to have that rainbow, since my email client is focused on productivity rather than aesthetics. I even have a label ("pending") which intentionally blends with the theme, so unimportant emails do not catch my attention too much.

Thunderbird's approach works very very well for me.

Thanks for your efforts.
Comment 5 Milan Crha 2018-10-02 10:49:40 UTC
Oh, I completely forgot of this bug report. I'm sorry.

Let's do it, let's colorize selection background with the label/text foreground and change the text color accordingly for that selection. And as a bonus, when there is set more than one label on the message pick the color of the first, in order of the labels in the settings, instead of rejecting colorize the text (which also mimics what Thunderbird does).

Created commit 5ac881ff36 in evo master (3.31.1+)
Comment 6 Lukas Pirl 2018-10-02 11:33:10 UTC
Very nice, thanks @mcrha.
Comment 7 Dan 2018-10-05 12:43:02 UTC
Wonderful! Thanks a lot @mcrha!
Comment 8 Steven Bakker 2019-05-01 19:50:03 UTC
As indicated in the gitlab issue #416, this new logic causes major headaches when `-MessageList-new-mail-bg-color` is used. If that property is set, it is impossible to find out which emails are selected in a list of unread mails. Since it is not possible to specify a custom foreground colour for unread mails, and bold text does not stand out enough in a dark theme, I have to use the background property to mark unread mails. As it is now, that is broken by this change.
Comment 9 Milan Crha 2019-05-02 08:06:23 UTC
> in the gitlab issue #416

For the sake of easiness:
https://gitlab.gnome.org/GNOME/evolution/issues/416