Bug 640994 - Email label colour disappears in message list pane when selected

Closes https://bugzilla.gnome.org/show_bug.cgi?id=640994